fixed header icons alignment

--- a/assets/sass/_theme/design-system/nav.sass
+++ b/assets/sass/_theme/design-system/nav.sass
@@ -155,6 +155,7 @@
             @include dropdown-i18n
             [role="button"],
                 @include icon(global-line, after)
+                    vertical-align: baseline
                 &[aria-expanded][aria-expanded="true"]
                     &::after
                         transform: none
