--- a/assets/sass/_theme/design-system/search.sass
+++ b/assets/sass/_theme/design-system/search.sass
@@ -20,6 +20,7 @@
         &::after
             line-height: inherit
             margin-left: $spacing-1
+            vertical-align: baseline
     &:not(.pagefind-menu)    
         padding: $spacing-1 $spacing-2
     &.toggle-both
